--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 col-xxl-9 mx-auto">
-                    <div class="text-center cta-inner rounded" style="margin-top: 30px;">
+                    <div class="text-center cta-inner rounded" style="margin-top: 30px;border-top: 4px solid #4b2d13 ;border-right: 4px solid #4b2d13 ;border-bottom: 4px solid #4b2d13 ;border-left: 4px solid #4b2d13 ;">
                         <h2 class="section-heading mb-4"><span class="text-break section-heading-lower" style="font-family: Lora, serif;">Nekoparaiten</span></h2>
-                        <p class="mb-0" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
+                        <p class="mb-0" style="font-family: 'Alegreya Sans', sans-serif;font-size: 20px;">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
     <section id="fraise" class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/fraise.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;" title="Test">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Fraise</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A talented young catgirl, but has little experience with social interaction. As such, she is very shy and not confident in her ingenuity. She is kind and puts her trust into others.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -72,10 +72,10 @@
             </div>
         </div>
     </section>
-    <section class="page-section clearfix">
+    <section id="chocola" class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/chocola.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;" title="Test">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Chocola</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -86,7 +86,7 @@
     <section class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/vanilla.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Vanilla</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A quiet, calm and very stoic. She rarely expresses her emotions, making her a somewhat of a kūdere character, as opposed to her sister's energetic, playful personality.&nbsp;<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -97,7 +97,7 @@
     <section class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/coconut.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-right">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-right" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">coconut</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">As one of the younger Minaduki catgirls, Coconut is among the more emotional of them. Contrary to her outward appearance, she expresses a strong desire to be considered cute, rather than be known for her physical strength.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -108,7 +108,7 @@
     <section class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/azuki.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">azuki</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">One of the most responsible of the Minaduki catgirls, often acting as their supervisor when helping to run La Soleil. However her brash personality often sees her come to blows with her sisters, in particular Coconut. Deep down however, she cares about her family and their well-being.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -119,7 +119,7 @@
     <section class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/maple.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Maple</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">The most independent and mature of the Minaduki catgirls, showing herself off as being refined yet at times haughty. She is extremely prideful, although her pride has at times been her downfall, as shown when buying her first guitar with Kashou which required his intervention to rescue her from herself.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -130,7 +130,7 @@
     <section class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/cinnamon.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Cinnamon</span></h2>
                     <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A soft-spoken, polite, and cheerful. However as a kitten, Cinnamon was extremely shy to the point of hiding in the corner of her room and not speaking to anyone else, until Maple forcibly coerces her out of her shell.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -162,14 +162,14 @@
                                             <tr data-aos="fade-right" style="background: #262a38;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">iOS (12.4 or later)</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_iOS_v010b.ipa</td>
-                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">297 MB</td>
+                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">1.67 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
                                                 <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/TLbP" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                             <tr data-aos="fade-right" data-aos-delay="200" style="background: #212430;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">Android (10 or later)<br></td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_Android_v010b.apk</td>
-                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">254 MB</td>
+                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">1.66 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
                                                 <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/xSYC" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
                                             </tr>
