--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Balsamiq+Sans&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Berkshire+Swash&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Calligraffitti&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caramel&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Carattere&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Bold-BS4-Animated-Back-To-Top.css">
     <link rel="stylesheet" href="assets/css/Bootstrap-4---Tabs-with-Arrows.css">
@@ -39,10 +45,10 @@
                 <div class="col-xxl-2 offset-xxl-0" data-aos="fade-left"><img class="d-xxl-flex" src="assets/img/nkprt_logo_2.png" style="width: 189px;"></div>
                 <div class="col-xxl-9 offset-xxl-0">
                     <ul class="navbar-nav mx-auto" data-aos="fade-down">
-                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Introduction</a></li>
-                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#fraise" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Character</a></li>
-                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Download</a></li>
-                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="https://github.com/nekoparaiten/nekoparaiten.github.io" style="font-size: 22px;font-family: 'Alegreya Sans', sans-serif;letter-spacing: 1px;">Development</a></li>
+                        <li class="nav-item" data-bss-hover-animate="pulse"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="font-size: 22px;font-family: 'Balsamiq Sans', serif;letter-spacing: 1px;">Introduction</a></li>
+                        <li class="nav-item" data-bss-hover-animate="rubberBand"><a class="nav-link" data-bss-hover-animate="pulse" href="#character" style="font-size: 22px;font-family: 'Balsamiq Sans', serif;letter-spacing: 1px;">Character</a></li>
+                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="#download" style="font-size: 22px;font-family: 'Balsamiq Sans', serif;letter-spacing: 1px;">Download</a></li>
+                        <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="https://github.com/nekoparaiten/nekoparaiten.github.io" style="font-size: 22px;font-family: 'Balsamiq Sans', serif;letter-spacing: 1px;">Development</a></li>
                     </ul>
                 </div>
             </div>
@@ -55,18 +61,21 @@
                 <div class="col-xl-9 col-xxl-9 mx-auto">
                     <div class="text-center cta-inner rounded" style="margin-top: 30px;border-top: 4px solid #4b2d13 ;border-right: 4px solid #4b2d13 ;border-bottom: 4px solid #4b2d13 ;border-left: 4px solid #4b2d13 ;">
                         <h2 class="section-heading mb-4"><span class="text-break section-heading-lower" style="font-family: Lora, serif;">Nekoparaiten</span></h2>
-                        <p class="mb-0" style="font-family: 'Alegreya Sans', sans-serif;font-size: 20px;">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
+                        <p class="mb-0" style="font-family: 'Balsamiq Sans', serif;font-size: 20px;">Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.<br>Creator: Sayori (NEKO WORKs)<br>Developed by Yostar Games<br></p>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <h1 id="character" style="font-family: 'Balsamiq Sans', serif;font-weight: bold;text-align: center;font-size: 62px;color: #4b2d13;letter-spacing: 1px;">CHARACTER</h1>
     </section>
     <section id="fraise" class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/fraise.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;" title="Test">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Fraise</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A talented young catgirl, but has little experience with social interaction. As such, she is very shy and not confident in her ingenuity. She is kind and puts her trust into others.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">A talented young catgirl, but has little experience with social interaction. As such, she is very shy and not confident in her ingenuity. She is kind and puts her trust into others.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -77,7 +86,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/chocola.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;" title="Test">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Chocola</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -88,7 +97,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/vanilla.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Vanilla</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A quiet, calm and very stoic. She rarely expresses her emotions, making her a somewhat of a kūdere character, as opposed to her sister's energetic, playful personality.&nbsp;<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">A quiet, calm and very stoic. She rarely expresses her emotions, making her a somewhat of a kūdere character, as opposed to her sister's energetic, playful personality.&nbsp;<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -99,7 +108,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/coconut.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-right" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">coconut</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">As one of the younger Minaduki catgirls, Coconut is among the more emotional of them. Contrary to her outward appearance, she expresses a strong desire to be considered cute, rather than be known for her physical strength.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">As one of the younger Minaduki catgirls, Coconut is among the more emotional of them. Contrary to her outward appearance, she expresses a strong desire to be considered cute, rather than be known for her physical strength.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -110,7 +119,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/azuki.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">azuki</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">One of the most responsible of the Minaduki catgirls, often acting as their supervisor when helping to run La Soleil. However her brash personality often sees her come to blows with her sisters, in particular Coconut. Deep down however, she cares about her family and their well-being.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">One of the most responsible of the Minaduki catgirls, often acting as their supervisor when helping to run La Soleil. However her brash personality often sees her come to blows with her sisters, in particular Coconut. Deep down however, she cares about her family and their well-being.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -121,7 +130,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/maple.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Maple</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">The most independent and mature of the Minaduki catgirls, showing herself off as being refined yet at times haughty. She is extremely prideful, although her pride has at times been her downfall, as shown when buying her first guitar with Kashou which required his intervention to rescue her from herself.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">The most independent and mature of the Minaduki catgirls, showing herself off as being refined yet at times haughty. She is extremely prideful, although her pride has at times been her downfall, as shown when buying her first guitar with Kashou which required his intervention to rescue her from herself.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -132,7 +141,7 @@
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/cinnamon.png">
                 <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-down" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Cinnamon</span></h2>
-                    <p class="mb-3" style="font-family: 'Alegreya Sans', sans-serif;font-size: 18px;">A soft-spoken, polite, and cheerful. However as a kitten, Cinnamon was extremely shy to the point of hiding in the corner of her room and not speaking to anyone else, until Maple forcibly coerces her out of her shell.<br></p>
+                    <p class="mb-3" style="font-family: 'Balsamiq Sans', serif;font-size: 18px;">A soft-spoken, polite, and cheerful. However as a kitten, Cinnamon was extremely shy to the point of hiding in the corner of her room and not speaking to anyone else, until Maple forcibly coerces her out of her shell.<br></p>
                     <div class="mx-auto intro-button"></div>
                 </div>
             </div>
@@ -140,9 +149,9 @@
     </section>
     <div id="download">
         <div class="d-flex flex-column" id="content-wrapper" style="background: #2d2f3e;">
-            <div data-bss-parallax-bg="true" id="content" style="color: #2D2F3E;margin-top: -28px;">
-                <div class="container-fluid" style="margin-bottom: 50px;height: 360.594px;margin-top: 76px;">
-                    <h3 class="text-center text-white mb-4" style="font-size: 40px;font-family: 'Alegreya Sans', sans-serif;font-weight: bold;">Download</h3><small class="form-text" style="color: rgb(255,255,255);font-size: 18px;font-family: Alatsi, sans-serif;">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
+            <div data-bss-parallax-bg="true" id="content" style="color: #2D2F3E;margin-top: -28px;margin-bottom: 142px;">
+                <div class="container-fluid" style="margin-bottom: 50px;height: 360.594px;margin-top: 76px;text-align: center;">
+                    <h3 class="text-center text-white mb-4" style="font-size: 62px;font-family: 'Alegreya Sans', sans-serif;font-weight: bold;letter-spacing: 0px;">DOWNLOAD</h3><small class="form-text" style="color: rgb(255,255,255);font-size: 18px;font-family: 'Balsamiq Sans', serif;">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
                     <div class="card" id="TableSorterCard" style="border-style: none;border-radius: 6.5px;margin-top: 37px;">
                         <div class="card-header py-3" style="border-width: 0px;background: rgb(23,25,33);margin-bottom: -15px;"></div>
                         <div class="row">
@@ -186,7 +195,7 @@
     </div>
     <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_bg.png&quot;);">
         <div class="container">
-            <p class="m-0 small" style="font-family: Alatsi, sans-serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
+            <p class="m-0 small" style="font-family: 'Balsamiq Sans', serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
         </div>
     </footer><a data-bss-hover-animate="pulse" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url(&quot;assets/img/cd-top-arrow.svg&quot;);" href="#0">Top</a>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
