--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </section>
     <section>
-        <h1 id="character" style="font-family: 'Balsamiq Sans', serif;font-weight: bold;text-align: center;font-size: 62px;color: #4b2d13;letter-spacing: 1px;">CHARACTER</h1>
+        <h1 data-aos="fade-down" id="character" style="font-family: 'Balsamiq Sans', serif;font-weight: bold;text-align: center;font-size: 62px;color: #4b2d13;letter-spacing: 1px;">CHARACTER</h1>
     </section>
     <section id="fraise" class="page-section clearfix">
         <div class="container">
@@ -151,7 +151,7 @@
         <div class="d-flex flex-column" id="content-wrapper" style="background: #2d2f3e;">
             <div data-bss-parallax-bg="true" id="content" style="color: #2D2F3E;margin-top: -28px;margin-bottom: 142px;">
                 <div class="container-fluid" style="margin-bottom: 50px;height: 360.594px;margin-top: 76px;text-align: center;">
-                    <h3 class="text-center text-white mb-4" style="font-size: 62px;font-family: 'Alegreya Sans', sans-serif;font-weight: bold;letter-spacing: 0px;">DOWNLOAD</h3><small class="form-text" style="color: rgb(255,255,255);font-size: 18px;font-family: 'Balsamiq Sans', serif;">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
+                    <h3 class="text-center text-white mb-4" data-aos="fade-down" style="font-size: 62px;font-family: 'Balsamiq Sans', serif;font-weight: bold;letter-spacing: 0px;">DOWNLOAD</h3><small class="form-text" style="color: rgb(255,255,255);font-size: 18px;font-family: 'Balsamiq Sans', serif;">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
                     <div class="card" id="TableSorterCard" style="border-style: none;border-radius: 6.5px;margin-top: 37px;">
                         <div class="card-header py-3" style="border-width: 0px;background: rgb(23,25,33);margin-bottom: -15px;"></div>
                         <div class="row">
