--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section style="padding-top: 20px;">
         <h1 data-aos="fade-down" id="character" style="font-family: 'Balsamiq Sans', serif;font-weight: bold;text-align: center;font-size: 62px;color: #4b2d13;letter-spacing: 1px;">CHARACTER</h1>
     </section>
     <section id="fraise" class="page-section clearfix">
