--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <footer class="bg-white sticky-footer" style="background: linear-gradient(#1f232d 0%, #1f232d 100%);"></footer>
         </div>
     </div>
-    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_bg.png&quot;);margin-top: 24px;"><img class="img-fluid" src="assets/img/iconbanner.png" style="height: 69.094px;">
+    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_bg.png&quot;);margin-top: 24px;"><img class="img-fluid" data-bss-hover-animate="jello" src="assets/img/iconbanner.png" style="height: 69.094px;">
         <div class="container">
             <p class="m-0 small" style="font-family: 'Balsamiq Sans', serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
         </div>
