--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Home - Nekoparaiten</title>
     <meta property="property" content="https://nekoparaiten.github.io/assets/img/nkprt_bg.jpg">
     <meta name="description" content="Nekoparaiten is an anime Neko romance simulation mobile game. Welcome to a new cats paradise where all kinds of nekos over the world will gather around you.">
-    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="assets/img/nkprt_ico.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="assets/img/favicon.png">
+    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprt_ico.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprt_ico.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1009x1009" href="assets/img/nkprt_ico.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caramel&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Carattere&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Charmonman&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Bold-BS4-Animated-Back-To-Top.css">
     <link rel="stylesheet" href="assets/css/Bootstrap-4---Tabs-with-Arrows.css">
@@ -33,13 +34,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="assets/css/Loading-Page-Animation-Style.css">
     <link rel="stylesheet" href="assets/css/Ludens---Dark-Mode-Admin-Dashboard.css">
+    <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
     <link rel="stylesheet" href="assets/css/untitled-1.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
 <body style="background: url(&quot;assets/img/la_soleil_bg.png&quot;) repeat;background-size: auto;">
-    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="mainNav" style="background: url(&quot;assets/img/footer_bg.png&quot;);">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark py-lg-4" id="top" style="background: url(&quot;assets/img/footer_bg.png&quot;);">
         <div class="container"><a class="navbar-brand text-uppercase d-lg-none text-expanded" href="#" style="color: rgb(255,255,255);"><img src="assets/img/nkprt_logo_2.png"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarResponsive"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" data-bss-hover-animate="rubberBand" style="background: url(&quot;assets/img/nkprt_ico.png&quot;) center / contain no-repeat;"></span></button>
             <div class="collapse navbar-collapse" data-bss-parallax-bg="true" id="navbarResponsive">
                 <div class="col-xxl-2 offset-xxl-0" data-aos="fade-left"><img src="assets/img/nkprt_logo_2.png" style="width: 189px;"></div>
@@ -153,7 +156,7 @@
     <div>
         <div class="d-flex flex-column" id="content-wrapper">
             <div data-bss-parallax-bg="true" id="content" style="color: #2D2F3E;margin-top: -28px;margin-bottom: 142px;">
-                <div class="container-fluid" style="margin-bottom: 50px;height: 360.594px;margin-top: 76px;text-align: center;"><small class="form-text" style="color: rgb(255,255,255);font-size: 24px;font-family: 'Alegreya Sans', sans-serif;text-shadow: 0px 0px 8px rgb(0,0,0);">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
+                <div class="container-fluid" style="margin-bottom: 2px;height: 360.594px;margin-top: 76px;text-align: center;"><small class="form-text" style="color: rgb(255,255,255);font-size: 24px;font-family: 'Alegreya Sans', sans-serif;text-shadow: 0px 0px 8px rgb(0,0,0);">This is a beta release. For iOS, click the URL to join a Testflight program and enroll for a beta testing. For Android, click the URL to download and install .apk app and activate a beta testing program.</small>
                     <div class="card" id="TableSorterCard" style="border-style: none;border-radius: 6.5px;margin-top: 37px;">
                         <div class="card-header py-3" style="border-width: 0px;background: rgb(23,25,33);margin-bottom: -15px;"></div>
                         <div class="row">
@@ -173,16 +176,16 @@
                                             <tr data-aos="fade-right" style="background: #262a38;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">iOS (12.4 or later)</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_iOS_v010b.ipa</td>
-                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">1.67 GB</td>
+                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">2.67 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/TLbP" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://t.ly/TLbP" style="color: #00bdff;" title="Enroll for iOS"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                             <tr data-aos="fade-right" data-aos-delay="200" style="background: #212430;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">Android (10 or later)<br></td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_Android_v010b.apk</td>
-                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">1.66 GB</td>
+                                                <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">2.66 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bss-hover-animate="pulse" href="https://t.ly/xSYC" style="color: #00bdff;"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://t.ly/xSYC" style="color: #00bdff;" title="Enroll for Android"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -192,14 +195,25 @@
                     </div>
                 </div>
             </div>
-            <footer class="bg-white sticky-footer" style="background: linear-gradient(#1f232d 0%, #1f232d 100%);"></footer>
         </div>
-    </div>
-    <footer class="text-center footer text-faded py-5" style="background: url(&quot;assets/img/footer_bg.png&quot;);margin-top: 24px;"><img class="img-fluid" data-bss-hover-animate="jello" src="assets/img/iconbanner.png" style="height: 69.094px;">
-        <div class="container">
-            <p class="m-0 small" style="font-family: 'Balsamiq Sans', serif;">©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</p>
+    </div><a data-bss-hover-animate="pulse" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url(&quot;assets/img/cd-top-arrow.svg&quot;);" href="#top">Top</a>
+    <footer class="d-table" style="background: url(&quot;assets/img/footer_bg.png&quot;);height: 239.542px;padding-bottom: 23px;background-size: cover;">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-xxl-5 footer-navigation"><img class="img-fluid" src="assets/img/Yostar_logo.png" style="height: 42px;margin-right: 10px;"><img class="img-fluid" src="assets/img/Nekoworks_logo.png" style="height: 51.04170000000001px;">
+                <h3><a href="#"></a></h3>
+                <p class="links" style="font-family: 'Balsamiq Sans', serif;"><a href="index.html">INTRODUCTION</a><strong> · </strong><a href="#character">CHARACTER</a><strong> · </strong><a href="#download">DOWNLOAD</a><strong> · </strong><a href="https://github.com/nekoparaiten/nekoparaiten.github.io">DEVELOPMENT</a></p>
+                <p class="company-name" style="font-family: 'Balsamiq Sans', serif;color: rgba(255,255,255,0.4);letter-spacing: 1px;"><strong>©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</strong><br></p>
+            </div>
+            <div class="col-md-4 footer-about">
+                <h4>Contact</h4>
+                <p style="font-family: 'Balsamiq Sans', serif;color: rgb(186,186,186);"> For business inquiry, please contact: business@yo-star.com<br></p>
+                <div class="social-links social-icons"><a href="https://twitter.com/nekoparaiten_en?lang=en" style="background: url(&quot;assets/img/twitter_logo.png&quot;) center / contain no-repeat;margin-right: 10px;"></a><a href="https://nekopara.com/en/" style="background: url(&quot;assets/img/favicon.png&quot;) no-repeat;background-size: contain;filter: brightness(200%) contrast(81%);margin-right: 10px;"></a><a href="https://yo-star.com/pc/index.html" style="background: url(&quot;assets/img/Yostar_ico.png&quot;) no-repeat;background-size: contain;filter: invert(100%);transform: scale(1.21);"></a></div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-xxl-3 d-sm-flex justify-content-xxl-center align-items-xxl-center footer-contacts">
+                <div class="d-sm-flex"><img class="img-fluid d-xxl-flex flex-shrink-0" data-bss-hover-animate="jello" src="assets/img/iconbanner.png" style="height: 69.094px;"></div>
+            </div>
         </div>
-    </footer><a data-bss-hover-animate="pulse" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url(&quot;assets/img/cd-top-arrow.svg&quot;);" href="#0">Top</a>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
@@ -209,6 +223,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="assets/js/Loading-Page-Animation-Style.js"></script>
     <script src="assets/js/Ludens---Dark-Mode-Admin-Dashboard-1.js"></script>
     <script src="assets/js/Ludens---Dark-Mode-Admin-Dashboard-2.js"></script>
     <script src="assets/js/Ludens---Dark-Mode-Admin-Dashboard-3.js"></script>
