--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                 <p class="company-name" style="font-family: 'Balsamiq Sans', serif;color: rgba(255,255,255,0.4);letter-spacing: 1px;"><strong>©&nbsp;2022 Yostar Ltd. &amp; NEKO WORKs All Rights Reserved.</strong><br></p>
             </div>
             <div class="col-md-4 footer-about">
-                <h4>Contact</h4>
-                <p style="font-family: 'Balsamiq Sans', serif;color: rgb(186,186,186);"> For business inquiry, please contact: business@yo-star.com<br></p>
+                <h4 style="font-family: 'Balsamiq Sans', serif;font-size: 22px;">Contact</h4>
+                <p style="font-family: 'Balsamiq Sans', serif;color: rgb(210,210,210);"> For business inquiry, please contact: business@yo-star.com<br></p>
                 <div class="social-links social-icons"><a href="https://twitter.com/nekoparaiten_en?lang=en" style="background: url(&quot;assets/img/twitter_logo.png&quot;) center / contain no-repeat;margin-right: 10px;"></a><a href="https://nekopara.com/en/" style="background: url(&quot;assets/img/favicon.png&quot;) no-repeat;background-size: contain;filter: brightness(200%) contrast(81%);margin-right: 10px;"></a><a href="https://yo-star.com/pc/index.html" style="background: url(&quot;assets/img/Yostar_ico.png&quot;) no-repeat;background-size: contain;filter: invert(100%);transform: scale(1.21);"></a></div>
             </div>
             <div class="col-sm-6 col-md-4 col-xxl-3 d-sm-flex justify-content-xxl-center align-items-xxl-center footer-contacts">
