--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section data-bss-parallax-bg="true" id="fraise" class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-right" src="assets/img/fraise.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;" title="Test">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-up" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Fraise</span></h2>
                     <p class="mb-3" style="font-family: Lora, serif;font-size: 18px;">A talented young catgirl, but has little experience with social interaction. As such, she is very shy and not confident in her ingenuity. She is kind and puts her trust into others.<br></p>
                     <div class="mx-auto intro-button"></div>
@@ -87,7 +87,7 @@
     <section id="chocola" class="page-section clearfix">
         <div class="container">
             <div class="intro"><img class="img-fluid intro-img mb-3 mb-lg-0 rounded" data-aos="fade-left" src="assets/img/chocola.png">
-                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;" title="Test">
+                <div class="text-center intro-text p-5 rounded bg-faded" data-aos="flip-left" style="border-left: 15px solid #4b2d13 ;">
                     <h2 class="section-heading mb-4"><span class="section-heading-upper"></span><span class="section-heading-lower" style="font-family: Lora, serif;">Chocola</span></h2>
                     <p class="mb-3" style="font-family: Lora, serif;font-size: 18px;">A cheerful and energetic Catgirl as Kashou himself describes her, 'happy-go-lucky'. She doesn't usually get upset, and even when she does, she often swings back to being as cheery as usual, though occasionally she can be genuinely sad about something.<br></p>
                     <div class="mx-auto intro-button"></div>
