--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
                     </div>
                 </div>
             </div>
+            <div style="text-align: center;padding-top: 72px;"><img class="img-fluid" src="assets/img/game1comp.png"></div>
+            <div style="text-align: center;"><img class="img-fluid" src="assets/img/game2comp.png" style="padding-top: 26px;"></div>
         </div>
     </div><a data-bss-hover-animate="pulse" class="cd-top js-cd-top cd-top--fade-out cd-top--show" style="background-image:url(&quot;assets/img/cd-top-arrow.svg&quot;);" href="#top">Top</a>
     <footer class="d-table" style="background: url(&quot;assets/img/footer_bg.png&quot;);height: 239.542px;padding-bottom: 23px;background-size: cover;">
