--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_iOS_v010b.ipa</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">2.67 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://t.ly/TLbP" style="color: #00bdff;" title="Enroll for iOS"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://drive.google.com/file/d/1OtwwzjkI_g--9L_nBS3tUAN9u7-6TcB7/view?usp=sharing" style="color: #00bdff;" title="Enroll for iOS"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                             <tr data-aos="fade-right" data-aos-delay="200" style="background: #212430;">
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">Android (10 or later)<br></td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">nkprt_Android_v010b.apk</td>
                                                 <td style="color: rgb(255,255,255);font-family: Alatsi, sans-serif;">2.66 GB</td>
                                                 <td class="text-center align-middle" style="max-height: 60px;height: 60px;color: rgb(255,255,255);font-family: Alatsi, sans-serif;">0.1.0 (Beta)</td>
-                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://t.ly/xSYC" style="color: #00bdff;" title="Enroll for Android"><i class="far fa-eye"></i></a></td>
+                                                <td><a class="btn btnMaterial btn-flat primary semicircle" role="button" data-bs-toggle="tooltip" data-bss-tooltip="" data-bss-hover-animate="pulse" href="https://drive.google.com/file/d/1OtwwzjkI_g--9L_nBS3tUAN9u7-6TcB7/view?usp=sharing" style="color: #00bdff;" title="Enroll for Android"><i class="far fa-eye"></i></a></td>
                                             </tr>
                                         </tbody>
                                     </table>
